# farmap

./: Cargo.toml  LICENSE.md  README.md
crates/farmap/: Cargo.toml  README.md
crates/farmap-api/: Cargo.toml
crates/farmap-api/src/: app.rs  data.rs  main.rs
crates/farmap-api/test-data/: user-db.json
crates/farmap-api/tests/: integration_test.rs
crates/farmap-cli/: Cargo.toml
crates/farmap-cli/data/dummy-data/: spam.jsonl
crates/farmap-cli/src/: main.rs
crates/farmap/benches/: benchmarks.rs
crates/farmap/data/: dummy-data_db.json  dummy-data_db_v1.json
crates/farmap/data/dummy-data/: spam_2.json  spam_2.jsonl
crates/farmap/data/invalid-data/: collision_data.jsonl
crates/farmap/data/local-data-api-mirror/: commit_call
crates/farmap/src/: analyze_spam_entry.rs  cast_meta.rs  cast_type.rs  collidable.rs  dated.rs  fid.rs  fid_score_shift.rs  fidded.rs  follow_count.rs  github_importer.rs  has_tag.rs  import.rs  importer_utils.rs  is_user.rs  lib.rs  native_user_value.rs  pinata_importer.rs  pinata_parser.rs  set_with_cast_data.rs  spam_score.rs  subset.rs  time_utils.rs  try_from_user.rs  try_from_user_set.rs  unprocessed_user_line.rs  user.rs  user_collection.rs  user_collection_serde.rs  user_error.rs  user_serde.rs  user_set.rs  user_store_with_native_user_value.rs  user_value.rs  user_with_cast_data.rs  user_with_spam_data.rs  utils.rs  wield_importer.rs  wield_parser.rs
crates/farmap/src/core/: any_user_value.rs  collidable.rs  has_tag.rs  mod.rs  user_collection.rs  user_collection_error.rs  user_store.rs  user_value.rs
crates/farmap/src/fetch/: errors.rs  github_importer.rs  github_parser.rs  import.rs  importer_utils.rs  local_spam_label_importer.rs  mod.rs  pinata_importer.rs  pinata_parser.rs  retrieve_error.rs  wield_importer.rs  wield_parser.rs
crates/farmap/test-data/: has_cast_data_1.json  has_cast_data_2.json
crates/farmap/test-data/pinata-mock/: api-body-likes.json  api-body-link.json  api-body.json
crates/farmap/tests/: cast_stats_tests.rs  generated_data.rs  github_mock_import.rs  mock_import_tests.rs  pinata_mock_import.rs  spam_label_import_and_creation.rs
data/invalid-data/: data.jsonl  invalid_spamscore.jsonl
scripts/: data-setup.sh
src/: lib.rs  main.rs  spam_score.rs  subset.rs  user.rs  user_collection.rs
tests/: generated_data.rs
