[package]
name = "farmap-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
serde = {version = "1.0.217", features =["derive"]}
serde-jsonlines = "0.7.0"
serde_json = "1.0.137"
thiserror = "2.0.11"
simple-log = "2.1.2"
farmap = {path = "../farmap"}
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.16"
