[package]
name = "farmap"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["caz.eth"]
keywords = ["crypto", "blockchain", "json", "ethereum", "farcaster"]
categories = ["data-structures"]
description = "A library for working with Farcaster label datasets"
repository = "https://github.com/cazeth/farmap"

[dependencies]
chrono = {version="0.4.39", features=["serde"]}
serde = {version = "1.0.217", features =["derive"]}
serde-jsonlines = "0.7.0"
serde_json = "1.0.137"
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
