[package]
name = "farmap"
version = "0.4.2"
edition = "2021"
license = "MIT"
authors = ["caz.eth"]
keywords = ["crypto", "blockchain", "json", "ethereum", "farcaster"]
categories = ["data-structures"]
description = "A library for working with Farcaster label datasets"
repository = "https://github.com/cazeth/farmap"

[dependencies]
chrono = {version="0.4.39", features=["serde"]}
itertools = "0.14.0"
log = "0.4.27"
reqwest = "0.12.15"
serde = {version = "1.0.217", features =["derive"]}
serde-jsonlines = "0.7.0"
serde_json = "1.0.137"
thiserror = "2.0.11"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
criterion = "0.5.1"
mockito = "1.7.0"
tokio = {version="1.44.2", features=["full"]}

[[bench]]
name = "benchmarks"
harness = false
